Update SecureCommunicationSystem.java